dnl --------------------------------------------------------------------
dnl
dnl $Source: /home/torsten/cvs/bar/tcl/scanx/configure.in,v $
dnl $Revision: 1.1 $
dnl $Author: torsten $
dnl Contents: scanx auto-configure script (autoconf)
dnl
dnl --------------------------------------------------------------------

dnl ----------------------- additional macros --------------------------

dnl ------------------------- basic settings ---------------------------

PACKAGE=scanx

MAJOR_VERSION=0
MINOR_VERSION=1
PATCHLEVEL=

VERSION=${MAJOR_VERSION}.${MINOR_VERSION}${PATCHLEVEL}
NODOT_VERSION=${MAJOR_VERSION}${MINOR_VERSION}

dnl --- initialize autoconf
AC_INIT([scanx],[0.01])
AC_PREREQ(2.53)
TEA_INIT([3.5])

dnl --- set source-directory (specify existing source file)
AC_CONFIG_SRCDIR(scanx.c)

dnl --- install-sh, config.sub and config.guess are in this directory.
dnl AC_CONFIG_AUX_DIR(bin)

dnl --- check bost system
dnl AC_CANONICAL_HOST

dnl AC_PRESERVE_HELP_ORDER

dnl ----------------------- substitute settings ------------------------

AC_SUBST(PACKAGE)
AC_SUBST(VERSION)

AC_SUBST(INSTALL_DIR)                       dnl installation directory
AC_SUBST(INSTALL_BIN_DIR)                   dnl installation directory for binaries

AC_SUBST(CC)
AC_SUBST(LD)
AC_SUBST(STRIP)

AC_SUBST(CC_FLAGS)
AC_SUBST(CC_WARN_FLAGS)
AC_SUBST(CC_OPTIMIZE)
AC_SUBST(CC_DEFINES)
AC_SUBST(CC_INCLUDES)

AC_SUBST(LD_FLAGS)

AC_SUBST(LIBRARY_PATHS)
AC_SUBST(LIBRARIES)
AC_SUBST(STATIC_LIBRARIES)

dnl ----------------------- initialize variables -----------------------

CC_FLAGS=""
CC_DEFINES=""
CC_OPTIMIZE=""
CC_INCLUDES=""

LD_FLAGS=""
LIBRARY_PATHS=""
LIBRARIES=""
STATIC_LIBRARIES=""

dnl ---------------------------- check system --------------------------

dnl ---------------------------- directories ---------------------------

dnl --------------------- --with/--without options ---------------------

AC_ARG_WITH(
  tcl-dir,
  AC_HELP_STRING([--with-config-dir=<path>],[configuration directory (default: /etc)]),
  [CONFIG_DIR=$withval],
  [CONFIG_DIR=/etc]
)

dnl ------------------- --enable/--disable options ---------------------

AC_ARG_ENABLE(
  debug,
  AC_HELP_STRING([--enable-debug],[enable debug version]),
  [ENABLE_DEBUG=$enableval]
)

dnl ------------------------------ programs ----------------------------

AC_PATH_PROGS(CC,gcc cc)
AC_PATH_PROGS(LD,ld gcc)
AC_PATH_PROGS(STRIP,strip)

AC_PROG_INSTALL
if test -z "$INSTALL"; then
  AC_MSG_ERROR([Cannot find a 'install' in PATH. Please check your PATH environment variable.])
fi

AC_PROG_MAKE_SET

AC_PROG_RANLIB

AC_OBJEXT
AC_EXEEXT

CC_FLAGS=""
CC_DEFINES="$CC_DEFINES"
CC_OPTIMIZE="$TCL_CFLAGS_OPTIMIZE"
CC_INCLUDES=""

if test "$ENABLE_DEBUG" = "yes"; then
  CC_FLAGS="$CC_FLAGS $TCL_CFLAGS_DEBUG"
  CC_OPTIMIZE="$CC_OPTIMIZE -O0"
else
  CC_OPTIMIZE="$CC_OPTIMIZE -O2"
  CC_DEFINES="$CC_DEFINES NDEBUG"
fi

LD_FLAGS=""
LIBRARY_PATHS="$LIBRARY_PATHS /usr/local/lib"

TEA_PATH_TCLCONFIG
TEA_LOAD_TCLCONFIG
TEA_SETUP_COMPILER
TEA_PUBLIC_TCL_HEADERS
TEA_CONFIG_CFLAGS

dnl -------------- headers/functions/definitions/libraries -------------

# set variables for tests
CFLAGS="$CC_FLAGS"
for z in $CC_DEFINES ""; do
  if test -n "$z"; then
    CFLAGS="$CFLAGS -D$z"
  fi
done
for z in $CC_INCLUDES ""; do
  if test -n "$z"; then
    CFLAGS="$CFLAGS -I$z"
  fi
done
LDFLAGS="$LD_FLAGS"
for z in $LIBRARY_PATHS ""; do
  if test -n "$z"; then
    LDFLAGS="$LDFLAGS -L$z"
  fi
done

AC_CHECK_HEADER(unistd.h)
AC_CHECK_HEADER(limits.h)
AC_CHECK_HEADER(sys/param.h)
AC_CHECK_HEADER(sys/time.h)
AC_CHECK_HEADER(sys/ioctl.h)
AC_CHECK_HEADER(sys/filio.h)

AC_CHECK_FUNCS(getcwd)
AC_CHECK_FUNCS(opendir)
AC_CHECK_FUNCS(strstr)
AC_CHECK_FUNCS(strtol)
AC_CHECK_FUNCS(tmpnam)
AC_CHECK_FUNCS(waitpid)
AC_CHECK_FUNCS(tzname)

AC_HEADER_TIME

TEA_ADD_INCLUDES([])
TEA_ADD_LIBS([])

dnl -------------------------------- misc ------------------------------

dnl ------------ autoheader: top/bottom include for config.h -----------

AC_CONFIG_HEADERS(config.h)

dnl no AC_DEFINE should occur after this line!

AH_TOP([
#ifndef __CONFIG__
#define __CONFIG__
])

AH_TOP([
])

AH_BOTTOM([#endif /* __CONFIG__ */])

dnl --------------------------------------------------------------------

if test "$prefix" = "NONE"; then
  prefix=/usr/local
fi
INSTALL_DIR=$prefix
if test "$bindir" = "\${exec_prefix}/bin"; then
  if test "$exec_prefix" = NONE; then
    INSTALL_BIN_DIR=$prefix/bin
  else
    INSTALL_BIN_DIR=$exec_prefix
  fi
else
  INSTALL_BIN_DIR=$bindir
fi

AC_CONFIG_FILES(Makefile)

AC_CONFIG_COMMANDS(BUILD_NOTE,
        [echo "";
         echo "Configuration:";
        ],
       )

AC_OUTPUT

dnl --- end of file ---



